# markitdown-rst

./: .gitattributes  .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  build.rs
.github/workflows/: build.yml
src/: cpu.rs  lib.rs  main.rs
src/batch/: mod.rs
src/converters/: csv.rs  docx.rs  html.rs  image_ocr.rs  json_conv.rs  mod.rs  pdf.rs  pptx.rs  txt.rs  xlsx.rs  zip_conv.rs
src/export/: md_to_docx.rs  md_to_html.rs  mod.rs
src/gui/: app.rs  mod.rs
src/i18n/: mod.rs
src/ocr/: mod.rs
src/preview/: mod.rs
src/utils/: mod.rs
tessdata/: README.md
