[package]
name = "markitdown-rst"
version = "1.1.0"
edition = "2021"
authors = ["MarkItDown-RST Contributors"]
description = "Multi-threaded document-to-markdown converter with OCR, multilingual UI, and MD viewer"
license = "MIT"
rust-version = "1.70"

[lib]
name = "markitdown_rst"
path = "src/lib.rs"

[[bin]]
name = "markitdown-rst"
path = "src/main.rs"

[[bin]]
name = "markitdown-cli"
path = "src/bin/cli.rs"

[dependencies]
# Async runtime — slim features instead of "full"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "io-util", "time"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization — only where actually needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Document parsing
lopdf = "0.35"
pdf-extract = "0.7"
quick-xml = "0.37"
docx-rs = "0.4"
calamine = "0.26"
zip = "2.2"
csv = "1.3"
htmd = "0.1"

# Markdown rendering
pulldown-cmark = "0.13"
comrak = { version = "0.29", default-features = false, optional = true }

# Image processing (used by OCR and GUI icon)
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }

# File detection
mime_guess = "2.0"
mime = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
colored = "2.2"
console = "0.15"

# Walk directory
walkdir = "2.5"

# Time — lighter than chrono
time = { version = "0.3", features = ["formatting", "macros", "serde"] }

# Regex
regex = "1.11"

# System directories
dirs = "5.0"

# Open files/URLs in default app (preview)
open = { version = "5.3", optional = true }

# eframe/egui for GUI
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", default-features = false, features = ["image"] }
rfd = "0.15"

# UUID for temp files (preview)
uuid = { version = "1.11", features = ["v4"], optional = true }

# Global allocator — faster than system allocator
mimalloc = { version = "0.1", default-features = false }

# Faster mutex
parking_lot = "0.12"

[features]
default = ["gui", "ocr", "preview"]
gui = ["image"]
cli-only = []
ocr = ["image"]
preview = ["comrak", "open", "uuid"]
full = ["ocr", "preview"]
light = []
logs = ["dep:tracing-subscriber"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = false
debug = false
incremental = false

[profile.release-tiny]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1

# Windows icon embedding
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 0
