[package]
name = "mdrust"
version = "1.5.0"
edition = "2021"
authors = ["MDrust Contributors"]
description = "Multi-threaded document-to-markdown converter with OCR, multilingual UI, and MD viewer"
license = "MIT"
rust-version = "1.75"

[lib]
name = "mdrust"
path = "src/lib.rs"

[[bin]]
name = "mdrust"
path = "src/main.rs"

[[bin]]
name = "mdrust-cli"
path = "src/bin/cli.rs"

[dependencies]
# Async runtime — slim features instead of "full"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "io-util", "time"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization — only where actually needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# SIMD-accelerated JSON parsing — drop-in replacement for serde_json on x86_64/aarch64
# Falls back to serde_json on unsupported platforms (32-bit x86, etc.)
simd-json = { version = "0.14", optional = true }

# Document parsing
lopdf = "0.35"
pdf-extract = "0.7"
quick-xml = "0.37"
docx-rs = "0.4"
calamine = "0.26"
zip = "2.2"
csv = "1.3"
htmd = "0.1"

# Markdown rendering
pulldown-cmark = "0.13"
comrak = { version = "0.29", default-features = false }

# Image processing (used by OCR and GUI icon)
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }

# OCR — Tesseract CLI subprocess (no compile-time C dependencies)
# Requires: tesseract binary on PATH at runtime
# Language data (tessdata) is embedded in the binary via include_bytes!
# This approach is more portable than FFI bindings — no need for
# libtesseract-dev / libleptonica-dev / vcpkg at compile time.

# File detection
mime_guess = "2.0"
mime = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
colored = "2.2"
console = "0.15"

# Walk directory
walkdir = "2.5"

# Time — lighter than chrono
time = { version = "0.3", features = ["formatting", "macros", "serde"] }

# Regex — with SIMD-accelerated literal search and DFA
regex = { version = "1.11", features = ["perf-inline", "perf-literal"] }

# System directories
dirs = "5.0"

# Open files/URLs in default app (preview)
open = { version = "5.3", optional = true }

# eframe/egui for GUI
# Note: enable both "wgpu" and "glow" features so we can fallback from wgpu to glow renderer
eframe = { version = "0.31", features = ["wgpu"] }
egui = "0.31"
egui_extras = { version = "0.31", default-features = false, features = ["image"] }
rfd = "0.15"

# In-egui Markdown rendering (for Rendered tab — real rendering, not just monospace)
egui_commonmark = { version = "0.20", optional = true }

# UUID for temp files (preview)
uuid = { version = "1.11", features = ["v4"], optional = true }

# Global allocator — faster than system allocator
mimalloc = { version = "0.1", default-features = false }

# Faster mutex
parking_lot = "0.12"

# ── Aggressive optimizations ──
# Content-hash cache — skip re-converting identical files (already SIMD: AVX2/AVX-512/SSE4.1)
blake3 = "1.5"
# Compact string — reduces allocations for file names/paths in batch mode
compact_str = "0.8"
# Small inline vectors — avoids heap allocation for small file lists
smallvec = "1.13"
# Faster hash map — replaces std HashMap in hot paths
ahash = "0.8"
# SIMD-accelerated byte/character counting — replaces .split_whitespace().count()
bytecount = "0.6"

[features]
default = ["gui", "ocr", "preview", "simd"]
gui = ["image", "egui_commonmark"]
cli-only = []
ocr = ["image"]
# tesseract-ffi was removed in v1.5.0 — OCR now uses CLI subprocess exclusively
# This eliminates compile-time C dependencies (libtesseract-dev, libleptonica-dev, vcpkg)
# while providing the same functionality at runtime
preview = ["open", "uuid"]
full = ["ocr", "preview"]
light = []
logs = ["dep:tracing-subscriber"]
# SIMD acceleration — enables simd-json for faster JSON parsing on x86_64/aarch64
simd = ["dep:simd-json"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = false
debug = false
incremental = false

[profile.release-tiny]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1

# Windows icon embedding
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 0
